# origin_nav2026_developing

data/: recover_pose.txt
data/new_map/: index.txt  map.pgm  map.yaml
src/bringup/launch/: mapping.launch.py  startup.launch.py  tf.launch.py
src/bringup/map/: 601.pgm  601.yaml  601_left.pgm  601_left.yaml  601_left_11_7.pgm  601_left_11_7.yaml
src/bringup/params/: global_config.yaml  nav2_params.yaml
src/bringup/rviz/: nav2_default_view.rviz
src/decision/calculate_attack_pose_if_available/: CMakeLists.txt  package.xml
src/decision/calculate_attack_pose_if_available/config/: chase_params.yaml
src/decision/calculate_attack_pose_if_available/include/calculate_attack_pose_if_available/: check_invincible.hpp  decide_shoot_and_pose.hpp
src/decision/calculate_attack_pose_if_available/launch/: calculatepose.launch.py
src/decision/calculate_attack_pose_if_available/src/: check_invincible.cpp  decide_shoot_and_pose.cpp
src/decision/dec_tree/: setup.py
src/decision/dec_tree/config/: rmuc.yaml  rmuc_simple.yaml
src/decision/dec_tree/dec_tree/: gui.py  referee_fake.py  root.py  tree_node.py
src/lidar/livox_ros_driver2/config/: MID360_config.json
src/localization/FAST_LIO2/config/: mid360.yaml
src/localization/FAST_LIO2/rviz/: fastlio.rviz
src/localization/FAST_LIO2/src/: laserMapping.cpp
src/localization/Point-LIO-grid_map_ros2/: CMakeLists.txt
src/localization/base_link_aft_kf/: CMakeLists.txt  package.xml
src/localization/base_link_aft_kf/include/base_link_aft_kf/: kf_node.hpp
src/localization/base_link_aft_kf/src/: kf_node.cpp
src/localization/icp_registration/config/: icp.yaml
src/localization/icp_registration/src/: icp_registration.cpp
src/localization/small_gicp_localization/launch/: small_gicp_localization.launch.py
src/localization/small_gicp_localization/src/: small_gicp_localization.cpp
src/navigation/fake_baselink/src/: fake_baselink.cpp
src/navigation/nav/launch/: navigation_launch.py
src/navigation/region_behavior/: CMakeLists.txt  package.xml
src/navigation/region_behavior/config/: 1.json
src/navigation/region_behavior/src/: region_behavior_node.cpp
src/perception/linefit_ground_segementation_ros2/linefit_ground_segmentation/src/: ground_segmentation.cc
src/perception/linefit_ground_segementation_ros2/linefit_ground_segmentation_ros/launch/: segmentation_params.yaml
src/perception/linefit_ground_segementation_ros2/linefit_ground_segmentation_ros/src/: ground_segmentation_node.cc
src/perception/rviz_plg/modify_map_to_odom/config/: config.yaml
src/serial/rm_interfaces/: CMakeLists.txt
src/serial/rm_interfaces/msg/: GimbalRegionCmd.msg  IsAbleToChaseCall.msg  IsAbleToChaseSend.msg
src/serial/rm_interfaces/srv/: InvincibleInquire.srv
src/serial/rm_serial/: setup.py
src/serial/rm_serial/launch/: rm_serial.launch.py
src/serial/rm_serial/rm_serial/: ReceiveFromC_Board.py  SendToC_Board.py
